...

                  const SizedBox(height: 40),

                  Center(
                    child: showButton == true
                      ? ElevatedButton(
                      key: Key('pledgeButton'),
                      onPressed: () async {

                        bool isConnected = await internet.checkInternetConnection();
                        if (!isConnected) {
                          internet.showLoadingIndicator(context); // Show loading until connected
                          await internet.waitForInternetConnection(); // Wait for internet
...
